# c-containers

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  cco-config.cmake.in  cco_compiler.h  cco_hash.h  cco_hash_support.h  cco_hlist.h  cco_iter.h  cco_queue.h  cco_stack.h  container-config.cmake.in  containers-config.cmake.in  meld.sh  test_hash.c  test_queue.c  test_stack.c
.github/workflows/: cmake.yml  deploy.yml  test.yml
include/cco/: cco.h  hash.h  hash_support.h  hlist.h  hnode.h  iter.h  node.h  of.h  queue.h  stack.h
include/container/: container.h  dnode.h  hash.h  iter.h  misc.h  node.h  queue.h  snode.h  stack.h
include/containers/: container_of.h  containers.h  hash.h  hash_support.h  hlist.h  hnode.h  iter.h  node.h  queue.h  stack.h
test/: CMakeLists.txt  hash.c  queue.c  stack.c
