function(containers_add_test name srcs)
    add_executable(${name} ${srcs})
    target_link_libraries(${name} PRIVATE CONTAINERS::containers)
    target_compile_features(${name} PRIVATE c_std_11)
    target_compile_options(${name} PRIVATE -Wall)
    target_compile_options(${name} PRIVATE -Wconversion)
    target_compile_options(${name} PRIVATE -Wextra)
    target_compile_options(${name} PRIVATE -Wmissing-prototypes)
    target_compile_options(${name} PRIVATE -Wno-empty-translation-unit)
    target_compile_options(${name} PRIVATE -Wno-gnu-statement-expression)
    target_compile_options(${name} PRIVATE -Wno-unused-function)
    target_compile_options(${name} PRIVATE -Wno-unused-parameter)
    target_compile_options(${name} PRIVATE -Wshadow)
    target_compile_options(${name} PRIVATE -Wsign-conversion)
    target_compile_options(${name} PRIVATE -Wstrict-prototypes)
    target_compile_options(${name} PRIVATE -pedantic)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

containers_add_test(hash hash.c)
containers_add_test(queue queue.c)
containers_add_test(stack stack.c)
