function(cco_add_test name srcs)
  add_executable(${name} ${srcs})
  target_link_libraries(${name} PRIVATE CCO::cco)
  target_compile_features(${name} PRIVATE c_std_11)
  target_compile_options(${name} PRIVATE ${WARNING_FLAGS})
  add_test(NAME ${name} COMMAND ${name})
endfunction()

cco_add_test(hash hash.c)
cco_add_test(queue queue.c)
cco_add_test(stack stack.c)
